<resources>
    <string name="app_name">AlkeWallet</string>
    <string name="el_lugar">El lugar más seguro para tu dinero</string>
    <string name="tiene_cuenta">Ya tiene cuenta?</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="crear_nueva_cuenta">Crear cuenta nueva</string>
    <string name="logea_y_comienza">Logea y comienza a transferir!</string>
    <string name="nombre">Nombre</string>
    <string name="ingresa_tu_nombre">Ingresa tu nombre</string>
    <string name="apellido">Apellido</string>
    <string name="ingresa_tu_apellido">Ingresa tu apellido</string>
    <string name="email">Email</string>
    <string name="ingresa_tu_mail">Ingresa tu email</string>
    <string name="contrasena">Contraseña</string>
    <string name="ingresa_tu_contrasena">Ingresa tu contraseña</string>
    <string name="reingresar_contrasena">Reingresar Contraseña</string>
    <string name="olvidaste_tu_contrasena">Olvidaste tu contraseña?</string>
    <string name="login">Login</string>
    <string name="registrarse_y_comenzar">Registrarse y comenzar a transferir</string>
    <string name="enviar_dinero">Enviar Dinero</string>
    <string name="ingresar_dinero">Ingresar Dinero</string>
    <string name="home">Home</string>
    <string name="perfil">Perfil</string>
    <string name="mi_perfil">Mi perfil</string>
    <string name="mi_informacion">Mi información</string>
    <string name="mis_tarjetas">Mis tarjetas</string>
    <string name="opciones">Opciones</string>
    <string name="centro_de_ayuda">Centro de ayuda</string>
    <string name="inicio">Inicio</string>
    <string name="saludo_usuario">Hola!</string>
    <string name="balance_total">Balance Total</string>
    <string name="monto_total">$0</string>
    <string name="ultimas_transacciones">Últimas transacciones</string>
    <string name="cantidad_ingresar">Cantidad a ingresar</string>
    <string name="cantidad_transferir">Cantidad a transferir</string>
    <string name="notas_transferencia">Notas de transferencia</string>
    <string name="notas_transferencia_opcional">Agregar notas de transferencia (opcional)</string>
    <string name="no_hay_transacciones">No hay transacciones registradas!</string>
    <string name="usuario_ingresar_dinero">Reem Khaled</string>
    <string name="mail_usuario_ingresar_dinero">reem_1993@gmail.com</string>
    <string name="cantidad_ingresar_monto">20.00</string>
    <string name="usuario_envir_dinero">Yara Khalil</string>
    <string name="mail_enviar_ingresar_dinero">yara_khalil@gmail.com</string>
    <string name="cantidad_enviar_monto">12.50</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="ingresa_nombre">Reem Khaled</string>
    <string name="ingresa_mail">reem_1993@gmail.com</string>
    <string name="envia_nombre">Yara Khalil</string>
    <string name="envia_mail">yara_khalil@gmail.com</string>
    <string name="usuario_nombre">Daniel Vidal</string>
    <string name="cuentacontabledestino">Cuenta Contable Destino</string>
    <string name="ingreseCantidad">Ingrese Cantidad</string>
    <string name="ingreseCtaContableDestino">Ingrese Cta. Contable Destino</string>
    <string name="numCuenta"># Cuenta:</string>
    <string name="ingrese_cantidad">Ingrese cantidad</string>

</resources>