<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginActivity"
    android:background="@drawable/fondo_avion">

    <!-- Título -->
    <TextView
        android:id="@+id/text_logea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="30dp"
        android:width="315sp"
        android:fontFamily="@font/jua"
        android:text="@string/logea_y_comienza"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Email -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="315dp"
        android:layout_height="78dp"
        android:layout_marginTop="282dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/lbl_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:fontFamily="@font/jua"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="49dp"
            android:layout_marginTop="25dp"
            app:boxBackgroundColor="@android:color/white"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/ingresa_tu_mail"
                android:inputType="textEmailAddress"
                android:textSize="14sp"
                tools:layout_editor_absoluteX="83dp"
                tools:layout_editor_absoluteY="333dp" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Contraseña -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="315dp"
        android:layout_height="102dp"
        android:layout_marginTop="384dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/lbl_clave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contrasena"
            android:fontFamily="@font/jua"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="0dp"
            android:layout_height="49sp"
            android:layout_marginTop="25dp"
            app:boxBackgroundColor="@android:color/white"
            app:endIconMode="password_toggle"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_clave"
                android:layout_width="315dp"
                android:layout_height="wrap_content"
                android:hint="@string/ingresa_tu_contrasena"
                android:inputType="textPassword"
                android:textSize="14sp"
                tools:layout_editor_absoluteX="83dp"
                tools:layout_editor_absoluteY="333dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Olvidaste -->
        <TextView
            android:id="@+id/txt_olvidaste"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="83dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="7dp"
            android:width="158dp"
            android:height="18dp"
            android:fontFamily="@font/jua"
            android:text="@string/olvidaste_tu_contrasena"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lbl_clave"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Boton Login -->
    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:width="315dp"
        android:backgroundTint="@color/celeste"
        android:paddingStart="80dp"
        android:paddingEnd="80dp"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/txt_crearcuenta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Ya tienes cuenta -->
    <TextView
        android:id="@+id/txt_crearcuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/jua"
        android:text="@string/crear_nueva_cuenta"
        android:textAlignment="center"
        android:textColor="@color/azul_oscuro"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>