<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginSignupPageActivity"
    android:background="@drawable/fondo_medialuna_abajo">

    <!-- Logo -->
    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <!-- Mensaje bienvenida -->
    <TextView
        android:id="@+id/txt_lugar"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="80dp"
        android:fontFamily="@font/jua"
        android:text="@string/el_lugar"
        android:textAlignment="center"
        android:textColor="@color/blanco"
        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_crearcuenta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo" />

    <!-- Boton crear cuenta -->
    <Button
        android:id="@+id/btn_crearcuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:width="315dp"
        android:height="49dp"
        android:backgroundTint="@color/celeste"
        android:paddingStart="80dp"
        android:paddingEnd="80dp"
        android:text="@string/crear_nueva_cuenta"
        app:layout_constraintBottom_toTopOf="@+id/txt_tienecuenta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Ya tienes cuenta -->
    <TextView
        android:id="@+id/txt_tienecuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/jua"
        android:text="@string/tiene_cuenta"
        android:textAlignment="center"
        android:textColor="@color/azul_oscuro"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>